--- a/vector.arithmetic.Rmd
+++ b/vector.arithmetic.Rmd
@@ -1,4 +1,5 @@
 ---
+title: Vector Arithmetic
 header-includes: \usepackage{color}
 output:
   html_document: default
@@ -22,7 +23,6 @@ library(grid)
 ```
 `r hl()$basefontsize()`
 
-#Vector Arithmetic
 
 One of the most useful features of R is it's ability to do math on vectors. In fact we have already used this feature many times, but now we will study it explicitely. 
 
@@ -49,7 +49,7 @@ x
 x^2
 ```
 
-##Matrix Algebra
+#Matrix Algebra
 
 R can also handle basic matrix calculations:
 
@@ -102,42 +102,7 @@ t(A)
 
 Other functions for matrices are *qr* for decomposition, *eigen* for computing eigenvalues and eigenvectors, and *svd* for singular value decomposition. There are also packages for dealing with things like sparse matrices etc.
 
-##Cycling
-
-consider the following:
-
-```{r warning=TRUE}
-x <- 1:3
-y <- 1:4
-x+y
-```
-
-so although we are adding a vector of length 3 to a vector of length 4 R still does it. It simply takes the shorter vector and starts it from the first element. It does however give a warning.
-
-
-```{r}
-x <- 1:3
-y <- 1:6
-x+y
-```
-
-here the length of the longer obejct is a multiple of the shorter one, so the shorter one "fits" into the longer one. Now R does not print a warning.
-
-In general you should try to avoid this sort of thing, it usually stems from an error in your program! The one exception is if one of the vectors is of length one:
-
-```{r}
-cbind(1:5, "A")
-```
-
-even then I recommend to write this as
-
-```{r}
-cbind(1:5, rep("A", 5))
-```
-
-just for clarities sake.
-
-##Vectorize
+#Vectorize
 
 When you write your own functions you should write them in such a way that they in turn are vectorized, that is can be applied to vectors. Here is one way to this. Consider the function *integrate*, which does numerical integration:
 
